[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/DevilDialog.gd" type="Script" id=1]
[ext_resource path="res://assets/dialog.png" type="Texture" id=2]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/dialogPlayer.png" type="Texture" id=4]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 224.456, 229.359 )

[node name="DialogueScene" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 646.609, 535.307 )
scale = Vector2( 1.63145, 1182.92 )
texture = SubResource( 2 )

[node name="devilDialog" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="devilDialog"]
margin_left = -505.0
margin_top = -468.561
margin_right = 47.0
margin_bottom = -38.561
rect_pivot_offset = Vector2( 405, 168.561 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test
"

[node name="TempDevilLabel" type="Label" parent="."]
margin_left = 1107.0
margin_top = 104.0
margin_right = 1289.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 405, 168.561 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Devil
"

[node name="Options3" type="Node2D" parent="."]
visible = false

[node name="dialogPlayer1" type="Area2D" parent="Options3"]
position = Vector2( 480, 785 )

[node name="dialogSprite" type="Sprite" parent="Options3/dialogPlayer1"]
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Options3/dialogPlayer1"]
margin_left = -209.0
margin_top = -254.0
margin_right = 210.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 239, 258.561 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test
"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Options3/dialogPlayer1"]
position = Vector2( 1.56531, -37.1172 )
shape = SubResource( 5 )

[node name="dialogPlayer2" type="Area2D" parent="Options3"]
position = Vector2( 960, 785 )

[node name="dialogSprite2" type="Sprite" parent="Options3/dialogPlayer2"]
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Options3/dialogPlayer2"]
margin_left = -209.0
margin_top = -254.0
margin_right = 210.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 239, 258.561 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test
"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Options3/dialogPlayer2"]
position = Vector2( 1.56531, -37.1172 )
shape = SubResource( 5 )

[node name="dialogPlayer3" type="Area2D" parent="Options3"]
position = Vector2( 1440, 785 )

[node name="dialogSprite3" type="Sprite" parent="Options3/dialogPlayer3"]
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Options3/dialogPlayer3"]
margin_left = -209.0
margin_top = -254.0
margin_right = 210.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 239, 258.561 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test
"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Options3/dialogPlayer3"]
position = Vector2( 1.56531, -37.1172 )
shape = SubResource( 5 )

[connection signal="input_event" from="Options3/dialogPlayer1" to="." method="_on_dialogPlayer1_input_event"]
[connection signal="input_event" from="Options3/dialogPlayer2" to="." method="_on_dialogPlayer2_input_event"]
[connection signal="input_event" from="Options3/dialogPlayer3" to="." method="_on_dialogPlayer3_input_event"]
